<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesLogin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <TextView
            android:text="@string/Mensaje_inicio"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/img_perfil"
            android:src="@drawable/ic_inicio_sesion"
            android:scaleType="centerCrop"
            android:layout_width="200dp"
            android:layout_height="200dp"/>


        <ImageView
            android:src="@drawable/email"
            android:layout_width="60dp"
            android:layout_height="80dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_email"
            android:text="@string/Ingresar_email"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_button_height"
            app:cornerRadius="8dp"/>

        <ImageView
            android:src="@drawable/google"
            android:layout_width="50dp"
            android:layout_height="80dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_google"
            android:text="@string/Ingresar_google"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_button_height"
            app:cornerRadius="8dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>