<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/Txt_editar_p"
            android:text="@string/Txt_editar_p"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--imagen de perfil-->
        <RelativeLayout
            android:id="@+id/perfilRL"
            android:layout_below="@+id/Txt_editar_p"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/img_perfil"
                android:src="@drawable/img_perfil"
                android:scaleType="centerCrop"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_alignParentEnd="true"
                app:fabSize="mini"
                android:src="@drawable/ic_cambiar_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <!--Nombres-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILnombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perfilRL"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_nombres"
                android:hint="@string/Et_nombres"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <!--Fecha de nacimiento-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILnombres"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_f_nacimiento"
                android:hint="@string/Et_f_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>
        <!--Codigomas telefon0-->
        <RelativeLayout
            android:id="@+id/RL_Cod_Tel"
            android:layout_below="@+id/TIL_Nac"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCod"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--Numero telefonico-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/selectorCod"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Et_telefono"
                    android:hint="@string/Et_telefono"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>



        </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_actualizar"
                android:text="@string/Btn_actualizar"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:layout_below="@+id/RL_Cod_Tel"
                android:layout_marginTop="15dp"
                app:icon="@drawable/ic_editar"
                android:layout_width="200dp"
                android:layout_height="@dimen/m_button_height"/>
    </RelativeLayout>
    

</RelativeLayout>